Added POST example API and example API implementation
